@@ -6,13 +6,15 @@ Revision history for Exobrain
     * DISTRO: HabitRPG is now packaged separately as Exobrain::HabitRPG
     * API: Exobrain::Agent has better documentation and functionality.
     * API: Measurement::Geo is now a role, not a class.
+    * API: Added a `can_run` method to Exobrain
+    * API: Exobrain::Agent::Depends allow dependencies to be delcared.
     * TESTING: Better testing for Exobrain::Agent.
     * TESTING: Exobrain::Test will load classes from t/lib
     * AGENTS: Ported `bee-habit` to Exobrain::Agent::Action::SimpleBeeHabit;
 
 1.07      2014-03-04 22:46:36PST-0800 America/Los_Angeles
 
-    * DEBUG: Added 'inject-done' debugging scrip to generate
+    * DEBUG: Added 'inject-done' debugging script to generate
              Intent::PersonalLog messages.
     * DISTRO: Turned Idonethis into a separate component
               (Exobrain::Idonethis)
